2006-01-28 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSpCmd.c: Revamped handling because of the deep 
	* generic/threadSpCmd.h: race condition which resulted in
	* tests/thread.test:     deadlocks when using exclusive mutexes.

200i-10-15 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: channel transfer code cleans
	  ready-to-fire events from the thread event queue
	  prior to cutting the channel out of the interp.

	* tests/thread.test: allows channel transfer tests
	  for all Unices and Windows using Tcl 8.4.10+ core.

2005-09-23 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: ThreadDetach() sets the both
	  source and target thread ID's for the detached
	  channel to zero, thus signalizing the cleanup code
	  to leave the channel in the cleanup-list when the
 	  thread who detached it exits.

2005-08-24 Zoran Vasiljevic <zv@archiware.com>

	* generic/tclXkeylist.c: made some calls static
	  so they do not interfere for static linking with
          certain extensions.
 
2005-08-08 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSvCmd.c: fixed traversing the list
	  of registered object types in Sv_DuplicateObj()
	  (thx to eric.melbardis@netkitsolutions.com)

2005-07-27 Zoran Vasiljevic <zv@archiware.com>

	*** 2.6.2 TAGGED FOR RELEASE (thread-2-6-2) ***

	* configure: regen
	* unix/README: added some clarifications about usage
	  of --with-gdbm switch
	* README: 
	* configure.in: bumped version to 2.6.2
	* aclocal.m4: fixed for alternate gdbm lib location 
	  as per patch request #1245204
	* generic/tclThread.c: removed Thread_Unload and
	  Thread_SafeUnload because we can't really be unloaded.
	* html/thread.html: regen
	* html/tpool.html: regen
	* html/tsv.html: regen
	* html/ttrace.html: regen
	* man/thread.n: regen
	* man/tpool.n: regen
	* man/tsv.n: regen
	* man/ttrace.n: regen

2005-07-26  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Remove SYSTEM_TCLSH and any